<resources>
    <string name="app_name">Lection18</string>
        <string name="legal">Legal Notices</string>
        <string name="no_maps">Google Maps V2 not available!</string>

    <string name="settings">Settings</string>
    <string name="go_to_london">Go to London</string>

    <string name="london">London</string>
    <string name="london_snippet">The capital of Great Britain</string>

    <string name="draw_line">Draw Line</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="location_aosp">Location</string>
    <string name="accuracy">Accuracy:</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="location_fused">Fused location</string>

</resources>
