<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/settings"
          android:title="@string/settings"
          android:orderInCategory="100"
          android:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/go_to_london"
                  android:title="@string/go_to_london" />
            <item android:id="@+id/draw_line"
                  android:title="@string/draw_line" />
        </menu>

    </item>

    <item
        android:id="@+id/locationAOSP"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/location_aosp"/>
    <item
        android:id="@+id/locationFused"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/location_fused"/>
    <item
        android:id="@+id/legal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/legal"/>

</menu>