<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/latitude"
        />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        tools:text = "55.666"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/longitude"
        />

    <TextView
        android:id="@+id/tv_lng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        tools:text = "66.555"
        android:gravity="center"
        />    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/altitude"
        />

    <TextView
        android:id="@+id/tv_alt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        tools:text = "66.555"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/accuracy"
        />

    <TextView
        android:id="@+id/tv_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        tools:text = "66.555"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/speed"
        />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        tools:text = "66.555"
        android:gravity="center"
        />

    <View
        android:id="@+id/gps_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>